--- a/bin/main/3DRIVER.fxml
+++ b/bin/main/3DRIVER.fxml
@@ -1,27 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="302.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Controller">
    <children>
-      <Label layoutX="60.0" layoutY="27.0" text="PLEASE ENTER YOUR MATRICS NUMBER">
+      <Label layoutX="79.0" layoutY="33.0" text="PLEASE ENTER YOUR MATRICS NUMBER">
          <font>
-            <Font name="Arial Nova Cond Light Italic" size="32.0" />
+            <Font size="25.0" />
          </font>
       </Label>
-      <TextField layoutX="218.0" layoutY="176.0" prefHeight="25.0" prefWidth="324.0" />
-      <Label layoutX="59.0" layoutY="173.0" text="Matrics Number: ">
+      <TextField fx:id="dMatric" layoutX="138.0" layoutY="151.0" prefHeight="36.0" prefWidth="324.0">
+         <font>
+            <Font size="20.0" />
+         </font></TextField>
+      <Label layoutX="203.0" layoutY="100.0" text="Matrics Number: ">
          <font>
             <Font name="Arial Nova Cond Light" size="26.0" />
          </font>
       </Label>
-      <Label layoutX="287.0" layoutY="14.0" text="DRIVER" textFill="#4400ff">
+      <Label layoutX="276.0" layoutY="12.0" text="DRIVER" textFill="#002fff">
          <font>
-            <Font name="Arial Nova Cond Light Italic" size="10.0" />
+            <Font size="10.0" />
          </font>
       </Label>
+      <Button layoutX="266.0" layoutY="229.0" mnemonicParsing="false" onAction="#dLogin" prefHeight="27.0" prefWidth="67.0" text="Login" />
+      <Button layoutX="23.0" layoutY="27.0" mnemonicParsing="false" onAction="#Home" text="Back" />
    </children>
 </AnchorPane>
