--- a/bin/main/5DriverYes.fxml
+++ b/bin/main/5DriverYes.fxml
@@ -47,12 +47,12 @@
             <Font name="Arial Nova Cond" size="18.0" />
          </font>
       </Button>
-      <Button fx:id="previousButton" layoutX="58.0" layoutY="335.0" mnemonicParsing="false" text="PREVIOUS" textAlignment="CENTER" textFill="RED">
+      <Button fx:id="previousButton" layoutX="58.0" layoutY="335.0" mnemonicParsing="false" onAction="#newPage" text="PREVIOUS" textAlignment="CENTER" textFill="RED">
          <font>
             <Font name="Arial Nova Cond" size="18.0" />
          </font>
       </Button>
-      <Button fx:id="nextButton" layoutX="388.0" layoutY="335.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="NEXT" textAlignment="CENTER" textFill="#0d00ff">
+      <Button fx:id="nextButton" layoutX="388.0" layoutY="335.0" mnemonicParsing="false" onAction="#newPage" prefHeight="35.0" prefWidth="100.0" text="NEXT" textAlignment="CENTER" textFill="#0d00ff">
          <font>
             <Font name="Arial Nova Cond" size="18.0" />
          </font>
