--- a/src/main/5DriverYes.fxml
+++ b/src/main/5DriverYes.fxml
@@ -57,6 +57,6 @@
             <Font name="Arial Nova Cond" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="33.0" layoutY="26.0" mnemonicParsing="false" onAction="#Home" text="HOME" />
+      <Button layoutX="33.0" layoutY="26.0" mnemonicParsing="false" onAction="#dHome" text="HOME" />
    </children>
 </AnchorPane>
